...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/address_id_label" />

            <TextView
                android:id="@+id/address_show_fullName_textView"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/address_show_fullName_text"
                android:text="@string/address_show_fullName_text"
...
